tests/snapshots/cli__code_lint_invalid_config.snap
---
source: tests/cli.rs
expression: output
---
--- exit code ---
2
--- stdout ---

--- stderr ---
Error: Failed to load configuration: TOML parse error at line 1, column 11
  |
1 | select = [invalid syntax]
  |           ^^^^^^^^^^^^^^
string values must be quoted, expected literal string
