tests/snapshots/cli__code_lint_json_format_deterministic.snap
---
source: tests/cli.rs
expression: output
---
--- exit code ---
1
--- stdout ---
[
  {
    "rule_name": "nested-function",
    "message": {
      "summary": "Function `inner` is defined inside another function.",
      "rationale": "Nested named functions bloat enclosing scopes and capture ambient state implicitly, increasing cognitive complexity and preventing isolated unit testing.",
      "suggestion": "Extract `inner` to a module-level private function (`_inner`) or use an inline `lambda` for trivial callbacks."
    },
    "location": {
      "context": "[TEMP_PATH]",
      "span": {
        "start": 17,
        "end": 42
      },
      "line": 2,
      "column": 5
    }
  }
]

--- stderr ---
