tests/snapshots/cli__code_lint_with_violations.snap
---
source: tests/cli.rs
expression: output
---
--- exit code ---
1
--- stdout ---
[TEMP_PATH]:2:5: [nested-function] Function `inner` is defined inside another function.
  Rationale: A nested named function captures the enclosing scope implicitly and cannot be imported or tested on its own.
  Suggestion: Extract `inner` to a module-level private function (`_inner`), or use an inline `lambda` for a trivial callback.

For details on a rule, run: omni-code-lint --explain <rule>

--- stderr ---
