tests/snapshots/cli__command_lint_described_commit_blocked.snap
---
source: tests/cli.rs
expression: output
---
--- exit code ---
1
--- stdout ---
VCS_Context:1:1: [edit-of-described-commit] `jj edit @` targets a described commit.
  Rationale: Editing a described commit rewrites reviewed history in place and tangles unrelated work into an existing change.
  Suggestion: Create a child change with `jj new @`, then move the intentional fixes with `jj squash`.

For details on a rule, run: omni-command-lint --explain <rule>

--- stderr ---
