tests/snapshots/cli__command_lint_help_flag.snap
---
source: tests/cli.rs
expression: output
---
--- exit code ---
0
--- stdout ---
Command execution workflow safety linter

Usage: omni-command-lint [OPTIONS]

Options:
      --format <FORMAT>
          Output format for diagnostics

          Possible values:
          - plain: Human-readable text
          - json:  Pretty-printed JSON array
          
          [default: plain]

      --cmd <CMD>
          Shell command string to validate

      --list-rules
          List every rule with its languages and summary, as Markdown

      --tag <LABEL>
          With --list-rules, keep only the rules a `select` label selects (tag, synonym or rule)

      --explain <RULE>
          Print one rule's documentation as Markdown

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

--- stderr ---
