tests/snapshots/cli__diff_only.snap
---
source: tests/cli.rs
expression: output_diff
---
--- exit code ---
1
--- stdout ---
[TEMP_PATH]/test.py:5:5: [flat-scope-enforced] Function `world` is defined inside another function.
  Rationale: Nested named functions bloat enclosing scopes and capture ambient state implicitly, increasing cognitive complexity and preventing isolated unit testing.
  Suggestion: Extract `world` to a module-level private function (`_world`) or use an inline `lambda` for trivial callbacks.

For details on a rule, run: omni-code-lint --explain <rule>

--- stderr ---
Info: Comparing against Jujutsu revision '@-'.
