tests/snapshots/cli__explain_jj.snap
---
source: tests/cli.rs
expression: "output.replace(binary, \"<binary>\")"
---
--- exit code ---
0
--- stdout ---
# no-edits-on-described-commits

Status: enabled (default)

## What it does

Checks shell commands before they run and flags `jj edit <revision>` (or a bare `jj edit`, which targets `@`) when the target revision has a non-empty description. Global options such as `-R` are understood. Commits without a description can still be edited.

## Why is this bad?

In Jujutsu, a described commit is usually finished work, often already reviewed. Editing it makes every later file change part of that commit, silently: unrelated work gets tangled into it and reviewed history is rewritten in place.

Create a child change with `jj new <revision>`, then move only the intended fixes into the commit with `jj squash`.

## Message

- Summary: Command `jj edit {revision}` targets a non-empty described commit.
- Rationale: Directly mutating an already-described commit rewrites reviewed history in place and risks tangling unrelated work into an existing change.
- Suggestion: Create a child change on top with `jj new {revision}` and squash intentional fixes selectively via `jj squash`.

## References

- [Jujutsu: Working copy](https://jj-vcs.github.io/jj/latest/working-copy/)

## Tags

- Topic: jj, vcs [via jj]
- Precision: exact
- Consensus: opinionated
- Impacted quality: reliability
- Analyzed input: command

--- stderr ---
