tests/snapshots/cli__explain_sleep_in_tests.snap
---
source: tests/cli.rs
expression: "output.replace(binary, \"<binary>\")"
---
--- exit code ---
0
--- stdout ---
# sleep-in-tests

Status: enabled (default)

## What it does

Flags wall-clock and async sleep calls in test files: `time.sleep`, `asyncio.sleep`, `anyio.sleep` and `trio.sleep` in Python, `std::thread::sleep` and `tokio::time::sleep` in Rust, and a bare `sleep`. Calls on an injected object, such as `fake_clock.sleep(10)`, are not flagged. Zero-duration sleeps are left to `zero-sleep-in-tests`.

## Why is this bad?

A fixed sleep guesses how long another thread, task or process needs. Too short, and the test fails when the machine is loaded: the test is flaky. Too long, and every run pays the full delay. Either way, the test no longer says what it waits for.

Wait on the event itself (an event, a channel, a condition variable), or inject a clock that the test advances.

## Message

- Summary: Test calls `{callee}()`.
- Rationale: Sleeping in a test slows the suite and makes the outcome depend on timing: the test passes on a fast machine and fails under load.
- Suggestion: Wait on a deterministic signal (an event, a channel, a condition) or advance an injected clock.
  - Python: Wait on an `asyncio.Event`, an `anyio.Event` or a queue, or advance an injected clock (`clock.sleep(...)`).
  - Rust: Wait on a `tokio::sync::Notify`, a channel or a `Condvar`, or pause time with `tokio::time::pause()`.

## Configuration

Keys under `[rules.sleep-in-tests]`, or `[rules.sleep-in-tests.<language>]` for one language:

- `enforcement-mode` (`ban` or `require-explanation`, default `ban`): `ban` flags every occurrence; `require-explanation` accepts an occurrence explained by an adjacent comment.
- `banned` (list of strings, default `sleep`; python adds `time.sleep`, `asyncio.sleep`, `anyio.sleep`, `trio.sleep`; rust adds `thread::sleep`, `std::thread::sleep`, `time::sleep`, `tokio::time::sleep`): Sleep calls flagged in tests.
- `extend-banned` (list of strings): items added to the default.

## References

- [Eradicating Non-Determinism in Tests (Martin Fowler)](https://martinfowler.com/articles/nonDeterminism.html)
- [Flaky Tests at Google and How We Mitigate Them](https://testing.googleblog.com/2016/05/flaky-tests-at-google-and-how-we.html)

## Tags

- Topic: test-timing, testing [via test-timing]
- Precision: exact
- Consensus: unopinionated
- Impacted quality: reliability
- Languages: python, rust
- Analyzed input: code
- File scope: tests-only

--- stderr ---
