tests/snapshots/cli__explain_typo.snap
---
source: tests/cli.rs
expression: "output.replace(binary, \"<binary>\")"
---
--- exit code ---
2
--- stdout ---

--- stderr ---
Error: unknown rule `sleep-in-test`; did you mean `sleep-in-tests`?
